build(docker): add backend build configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,33 @@ services:
       - "5432:5432"
     restart: always
     environment:
-      POSTGRES_PASSWORD: changemeinprod!
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    networks:
+      - internhub-network
 
   adminer:
     image: adminer:latest
     restart: always
     ports:
       - "8888:8080"
+    networks:
+      - internhub-network
+
+  backend:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    networks:
+      - internhub-network
+
+networks:
+  internhub-network:
+    driver: bridge
